# streamlit-mpa-template

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
streamlit_mpa_template/: cli.py  streamlit_mpa_template.py
streamlit_mpa_template/pages/: 1_spiral.py  2_plotting_animation.py
