[tool.poetry]
name = "streamlit_mpa_template"
version = "0.1.0"
description = "Streamlit MPA Template"
authors = ["reshdesu <mayuresh.kinare@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
altair = "^5.3.0"
docker = "^7.1.0"
loguru = "^0.7.2"
streamlit = "^1.36.0"
click = "^8.1.7"

[tool.poetry.scripts]
streamlit_mpa_template = "streamlit_mpa_template.cli:build_run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
